<resources>
    <string name="app_name">Draw And Sell</string>
    <string name="total_price_text">итого</string>
    <string name="checkout_text">оформить заказ</string>
    <string name="money_image_text">изображение доллара</string>
    <string name="price_without_discount">цена</string>
    <string name="discount_text">скидка</string>
    <string name="name_hint">Имя</string>
    <string name="second_name_hint">Фамилия</string>
    <string name="third_name_hint">Отчество</string>
    <string name="phone_hint">Телефон</string>
    <string name="make_auth">авторизироваться</string>
    <string name="detail_description_price_text">Цена</string>
    <string name="price_units">Руб</string>
    <string name="empty_cart_text">Ваша корзина пуста</string>
    <string name="user_login_text">Войти/Зарегистрироваться</string>
    <string name="please_login_text">пожалуйста, войдите</string>
    <string name="payment_method_card">Оплатить картой</string>
    <string name="payment_method_cash">Оплатить наличными</string>
    <string name="yes_word">Да</string>
    <string name="no_word">Нет</string>
    <string name="do_you_wanna_delete">Вы действительно хотите все удалить?</string>
    <string name="delete_favorite_alert_title">Удаление всех избранных</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Headers for screens -->
    <string name="products_header">Товары</string>
    <string name="detail_header">О товаре</string>
    <string name="cart_header">Корзина</string>
    <string name="checkout_header">Оформить заказ</string>
    <string name="catalog_header">Каталог</string>
    <string name="account_header">Аккаунт</string>
    <string name="favorite_header">Избранное</string>
    <string name="order_header">Добавление товара</string>

    <string name="add_to_cart_text">добавить в корзину</string>
    <string name="add_to_favorite_text">добавить в избранное</string>
    <string name="category_view_all">посмотреть все</string>
    <string name="add_product">Добавить продукт</string>
    <string name="add_product_text">Добавить продукт</string>
    <string name="add_product_name">Название</string>
    <string name="add_product_author">Автор</string>
    <string name="add_product_price">Цена</string>
    <string name="add_product_description">Описание</string>
    <string name="add_product_image_url">Ссылка на фото</string>
</resources>
