<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateProductFragment">

    <EditText
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_product_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/productAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_product_price"
        android:inputType="textPersonName|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/productDescription"
        app:layout_constraintEnd_toEndOf="@+id/productAuthor"
        app:layout_constraintStart_toStartOf="@+id/productAuthor"
        app:layout_constraintTop_toBottomOf="@+id/productAuthor" />

    <EditText
        android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_product_description"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toTopOf="@+id/productImageUrl"
        app:layout_constraintEnd_toEndOf="@+id/productPrice"
        app:layout_constraintStart_toStartOf="@+id/productPrice"
        app:layout_constraintTop_toBottomOf="@+id/productPrice" />

    <EditText
        android:id="@+id/productImageUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_product_image_url"
        android:inputType="textUri|textLongMessage|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addProduct"
        app:layout_constraintEnd_toEndOf="@+id/productDescription"
        app:layout_constraintStart_toStartOf="@+id/productDescription"
        app:layout_constraintTop_toBottomOf="@+id/productDescription" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/addProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_shape"
        android:text="@string/add_product_text"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/productAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_product_author"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/productPrice"
        app:layout_constraintEnd_toEndOf="@+id/productName"
        app:layout_constraintStart_toStartOf="@+id/productName"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

</androidx.constraintlayout.widget.ConstraintLayout>