<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CheckoutFragment">

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalPriceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalPriceText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/total_price_text"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkoutLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountPriceText" />

    <TextView
        android:id="@+id/priceWithoutDiscountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price_without_discount"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/discountPriceText"
        app:layout_constraintStart_toStartOf="@+id/totalPriceText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceWithoutDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/priceWithoutDiscountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceWithoutDiscountText" />

    <TextView
        android:id="@+id/discountPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_text"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/totalPriceText"
        app:layout_constraintStart_toStartOf="@+id/priceWithoutDiscountText"
        app:layout_constraintTop_toBottomOf="@+id/priceWithoutDiscountText" />

    <TextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/discountPriceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/discountPriceText" />

    <EditText
        android:id="@+id/checkoutLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/second_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/checkoutFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPriceText" />

    <EditText
        android:id="@+id/checkoutFirstName"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/checkoutPhone"
        app:layout_constraintEnd_toEndOf="@+id/checkoutLastName"
        app:layout_constraintStart_toStartOf="@+id/checkoutLastName"
        app:layout_constraintTop_toBottomOf="@+id/checkoutLastName" />

    <EditText
        android:id="@+id/checkoutPhone"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/checkoutFirstName"
        app:layout_constraintStart_toStartOf="@+id/checkoutFirstName"
        app:layout_constraintTop_toBottomOf="@+id/checkoutFirstName" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/catalogCheckoutBtn"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:itemCount="16"
        tools:listitem="@layout/horizontal_products_item"
        tools:orientation="horizontal" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/cartProducts"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPhone">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method_cash" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method_card" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/catalogCheckoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_shape"
        android:text="@string/checkout_text"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

