<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.CheckoutActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkout_header"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/totalPriceText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/totalPriceText"
            app:layout_constraintVertical_bias="0.0" />
    
        <ImageView
            android:id="@+id/moneyImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/money_image_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceWithoutDiscountText"
            app:layout_constraintVertical_bias="0.120000005"
            app:srcCompat="@drawable/ic_money" />
    
        <TextView
            android:id="@+id/totalPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/total_price_text"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/moneyImage"
            app:layout_constraintStart_toEndOf="@+id/moneyImage" />
    
        <Button
            android:id="@+id/catalogCheckoutBtn"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/checkout_text"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/priceWithoutDiscountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/price_without_discount"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/totalPriceText"
            app:layout_constraintTop_toBottomOf="@+id/header" />
    
        <TextView
            android:id="@+id/priceWithoutDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/priceWithoutDiscountText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/priceWithoutDiscountText" />
    
        <TextView
            android:id="@+id/discountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_text"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/totalPriceText"
            app:layout_constraintStart_toStartOf="@+id/priceWithoutDiscountText"
            app:layout_constraintTop_toBottomOf="@+id/priceWithoutDiscountText" />
    
        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/discountText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/discountText" />
    
        <EditText
            android:id="@+id/checkoutLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/second_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/moneyImage"
            app:layout_constraintTop_toBottomOf="@+id/totalPriceText"
            android:autofillHints="" />
    
        <EditText
            android:id="@+id/checkoutFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/checkoutLastName"
            app:layout_constraintStart_toStartOf="@+id/checkoutLastName"
            app:layout_constraintTop_toBottomOf="@+id/checkoutLastName" />
    
        <EditText
            android:id="@+id/checkoutMiddleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/third_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/checkoutFirstName"
            app:layout_constraintStart_toStartOf="@+id/checkoutFirstName"
            app:layout_constraintTop_toBottomOf="@+id/checkoutFirstName" />
    
        <EditText
            android:id="@+id/checkoutPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/checkoutMiddleName"
            app:layout_constraintStart_toStartOf="@+id/checkoutMiddleName"
            app:layout_constraintTop_toBottomOf="@+id/checkoutMiddleName" />

        <Button
            android:id="@+id/checkoutPay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/black"
            android:text="оплатить"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/catalogCheckoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutPhone"
            app:layout_constraintVertical_bias="0.86" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:srcCompat="@drawable/ic_arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>

